# CrewSpawner

./: .env.example  .replit  README.md  app.py  crew_generator.py  llm_selector.py  main.py  pyproject.toml  task_parser.py
attached_assets/: content-1748329831012.md  content-1748329833537.md
config/: agent_templates.py  task_templates.py
static/: script.js  style.css
templates/: index.html
